--- a/webpage.html
+++ b/webpage.html
@@ -7,7 +7,6 @@
     <link href="style.css" rel="stylesheet"></link>
 </head>
 <body>
-    <div class="div1">
 <header>
  <nav>
  <ul>
@@ -17,6 +16,52 @@
  </ul>
 </nav>
 </header>
-    </div>
+<p><b>{insert text}</b></p>
+<form>
+    <fieldset>
+        <legend>Personal Details</legend>
+        <label>Name</label>
+        <br>
+        <input type="text">
+        <br>
+        <label>Age</label>
+        <br>
+        <input type="text">
+        <br>
+        <label>Job</label>
+        <br>
+        <input type="text">
+        <br>
+        <label>Email</label>
+        <br>
+        <input type="email">
+        <br>
+        <label>Password</label>
+        <br>
+        <input type="password">
+        <br>
+        <label>Gender</label>
+        <br>
+        <input type="radio">Male<input type="radio">Female
+        <br>
+        <label>Hobbies</label>
+        <br>
+        <input type="checkbox">Sports
+        <input type="checkbox">Swimming
+        <input type="checkbox">Coding
+        <br>
+        <label>Choose a car:</label>
+        <select name="Cars">
+            <option value="Audi">Audi</option>
+            <option value="Mclaren">Mclaren</option>
+            <option value="Lamborginhi">Lamborginhi</option>
+            <option value="Mercedes">Mercedes</option>
+        </select>
+        <br>
+        <br>
+        <button type="submit">Submit</button>
+        <br>
+    </fieldset>
+</form>
 </body>
 </html>
