--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flask Mail</title>
 </head>
 <body>
-    <form action="/uploader" method="post" enctype="multipart/form-data">
-        <input type="file" name="file"/>
-        <input type="submit" />
-        {% if msg %}
-        <p>{{msg}}</p>
-        {% endif%}
+    <form action="/verify" method="post">
+        Email Address:<input type="email" name="email">
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
